--- a/app/src/main/res/layout/create_dialog.xml
+++ b/app/src/main/res/layout/create_dialog.xml
@@ -45,4 +45,34 @@
             android:layout_width="90dp"
             android:layout_height="45dp" />
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingTop="25dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/create_dialog_color"
+            android:paddingEnd="5dp"
+            android:textColor="#000000"
+            android:textSize="18sp"
+            tools:ignore="RtlSymmetry" />
+        <LinearLayout
+            android:layout_height="23dp"
+            android:layout_width="52dp"
+            android:paddingLeft="1dp"
+            android:layout_gravity="bottom"
+            android:background="#000000"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:id="@+id/color"
+                android:layout_width="50dp"
+                android:layout_height="21dp"
+                android:layout_gravity="center"
+                android:background="#FFFFFF"
+                android:orientation="horizontal" />
+        </LinearLayout>
+    </LinearLayout>
 </LinearLayout>
