--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="color_primary">#139318</color>
-    <color name="color_primary_dark">#022003</color>
+    <color name="color_primary">#2196F3</color>
+    <color name="color_primary_dark">#673AB7</color>
     <color name="color_accent">#009688</color>
     <color name="background_color">#C2C5C6</color>
 </resources>
