--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item android:id="@+id/undo"
+        android:icon="@drawable/undo"
+        app:showAsAction="always"
+        android:title="" />
+    <item android:id="@+id/redo"
+        android:icon="@drawable/redo"
+        app:showAsAction="always"
+        android:title="" />
     <item android:id="@+id/toolbar"
         android:icon="@drawable/table"
         app:showAsAction="always"
